--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
